--- a/feature/person_details/src/main/res/layout/fragment_person_details_container.xml
+++ b/feature/person_details/src/main/res/layout/fragment_person_details_container.xml
@@ -6,8 +6,8 @@
     <data>
 
         <variable
-            name="media"
-            type="com.indisparte.model.entity.MovieDetails" />
+            name="person"
+            type="com.indisparte.model.entity.PersonDetails" />
 
         <import type="android.view.View" />
     </data>
@@ -24,16 +24,16 @@
 
             <com.google.android.material.appbar.CollapsingToolbarLayout
                 android:id="@+id/collapse_toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/media_details_backdrop_height"
-                android:textSize="@dimen/medium_text_size"
                 style="@style/HugeTitleTextViewStyle"
+                android:layout_width="match_parent"
+                android:layout_height="400dp"
+                android:textSize="@dimen/medium_text_size"
                 app:collapsedTitleTextColor="?attr/colorOnPrimary"
                 app:contentScrim="?attr/colorPrimary"
                 app:expandedTitleMarginStart="@dimen/base_margin"
                 app:expandedTitleTextColor="@android:color/transparent"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
-                app:title="@{media.title}"
+                app:title="@{person.name}"
                 app:titleCollapseMode="fade">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
@@ -42,104 +42,66 @@
                     android:background="?attr/colorPrimary">
 
 
-                    <FrameLayout
-                        android:id="@+id/media_backdrop"
+                    <ImageView
+                        android:id="@+id/person_backdrop"
                         android:layout_width="match_parent"
-                        android:layout_height="250dp"
+                        android:layout_height="200dp"
+                        android:scaleType="centerCrop"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent">
-
-                        <androidx.viewpager2.widget.ViewPager2
-                            android:id="@+id/backdrop_viewPager"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:background="?attr/colorSecondary" />
-
-                        <me.relex.circleindicator.CircleIndicator3
-                            android:id="@+id/circleIndicator"
-                            android:layout_width="match_parent"
-                            android:layout_height="?attr/actionBarSize"
-                            android:layout_gravity="top"
-                            app:ci_drawable="@drawable/primary_radius"
-                            app:ci_drawable_unselected="@drawable/secondary_radius" />
-
-                    </FrameLayout>
+                        app:layout_constraintTop_toTopOf="parent"
+                        tools:src="@tools:sample/backgrounds/scenic" />
 
 
                     <View
+                        android:id="@+id/view"
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
                         android:background="@drawable/gradient_top"
-                        app:layout_constraintBottom_toBottomOf="@id/media_backdrop"
+                        app:layout_constraintBottom_toBottomOf="@id/person_backdrop"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <com.indisparte.ui.custom_view.PosterView
-                        android:id="@+id/media_poster"
+                        android:id="@+id/person_poster"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="150dp"
+                        android:scaleType="centerCrop"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:pv_cornerRadius="100dp"
+                        app:pv_imageUrl="@{person.completeProfilePathW780}"
+                        app:pv_posterHeight="100dp"
+                        app:pv_posterWidth="100dp" />
+
+                    <TextView
+                        android:id="@+id/person_name"
+                        style="@style/HugeTitleTextViewStyle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="@dimen/base_margin"
+                        android:maxLines="2"
+                        android:text="@{person.name}"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/person_poster"
+                        tools:text="@tools:sample/full_names" />
+
+                    <TextView
+                        android:id="@+id/person_role"
+                        style="@style/SmallTitleTextViewStyle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/base_margin"
-                        android:layout_marginTop="170dp"
-                        android:scaleType="centerCrop"
+                        android:layout_marginEnd="@dimen/base_margin"
+                        android:textColor="?attr/colorOnSecondary"
+                        app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:pv_imageUrl="@{media.completePosterPathW780}"
-                        app:pv_posterHeight="@dimen/default_poster_height"
-                        app:pv_posterWidth="@dimen/default_poster_width" />
-
-                    <TextView
-                        android:id="@+id/media_title"
-                        style="@style/HugeTitleTextViewStyle"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="@dimen/base_margin"
-                        android:ellipsize="end"
-                        android:maxLines="2"
-                        android:text="@{media.title}"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toEndOf="@id/media_poster"
-                        app:layout_constraintTop_toBottomOf="@id/media_backdrop"
-                        tools:text="Media title" />
-
-                    <androidx.appcompat.widget.LinearLayoutCompat
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toEndOf="@id/media_poster"
-                        app:layout_constraintTop_toBottomOf="@id/media_title">
-
-                        <com.google.android.material.chip.Chip
-                            android:id="@+id/certification"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="@dimen/base_margin"
-                            android:backgroundTint="?attr/colorSecondary"
-                            android:textColor="?attr/colorOnSecondary"
-                            android:textSize="@dimen/small_text_size"
-                            android:visibility="gone"
-                            app:layout_constraintTop_toBottomOf="@id/media_title"
-                            tools:text="PG-18"
-                            tools:visibility="visible" />
-
-                        <TextView
-                            android:id="@+id/media_release_date"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="@dimen/base_margin"
-                            android:layout_marginEnd="@dimen/base_margin"
-                            android:text='@{media.formattedReleaseDate+" - "+media.formattedRuntime }'
-                            android:textColor="?attr/colorOnSecondary"
-                            android:textSize="@dimen/small_text_size"
-                            android:visibility='@{media.formattedReleaseDate==null?View.GONE:View.VISIBLE}'
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toEndOf="@id/certification"
-                            app:layout_constraintTop_toBottomOf="@id/media_title"
-                            tools:text="23 May 2023 - 2 h 20 min" />
-                    </androidx.appcompat.widget.LinearLayoutCompat>
-
+                        app:layout_constraintTop_toBottomOf="@id/person_name"
+                        tools:text="Acting" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -180,7 +142,7 @@
             android:layout_gravity="bottom|end"
             android:layout_margin="@dimen/base_margin"
             android:backgroundTint="?attr/colorAccent"
-            android:src="@drawable/round_add_24" />
+            android:src="@drawable/ic_favorite" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
