--- a/core/navigation/src/main/res/navigation/main_navigation.xml
+++ b/core/navigation/src/main/res/navigation/main_navigation.xml
@@ -6,14 +6,14 @@
 
     <include app:graph="@navigation/home_graph" />
     <include app:graph="@navigation/movie_details_graph" />
-    <include app:graph="@navigation/search_graph"  />
+    <include app:graph="@navigation/search_graph" />
     <include app:graph="@navigation/discover_graph" />
     <include app:graph="@navigation/person_details_graph" />
 
     <action
         android:id="@+id/action_global_home_flow"
-        app:popUpTo="@id/nav_graph"
-        app:destination="@id/home_graph" />
+        app:destination="@id/home_graph"
+        app:popUpTo="@id/nav_graph" />
 
     <action
         android:id="@+id/action_global_search_flow"
@@ -23,23 +23,24 @@
     <action
         android:id="@+id/action_global_discover_flow"
         app:destination="@id/discover_graph"
-        app:popUpToInclusive="true"
         app:enterAnim="@anim/slide_in_from_right"
-        app:exitAnim="@anim/slide_out_to_right" />
+        app:exitAnim="@anim/slide_out_to_right"
+        app:popUpToInclusive="true" />
 
     <action
         android:id="@+id/action_global_movie_details"
         app:destination="@id/movie_details_graph"
-        app:popUpToInclusive="true"
         app:enterAnim="@anim/slide_in_from_right"
-        app:exitAnim="@anim/slide_out_to_right">
+        app:exitAnim="@anim/slide_out_to_right"
+        app:popUpToInclusive="true">
 
         <argument
             android:name="id"
             app:argType="integer" />
     </action>
+
     <action
-        android:id="@+id/action_person_details_details"
+        android:id="@+id/action_person_details"
         app:destination="@id/person_details_graph"
         app:enterAnim="@anim/slide_in_from_right"
         app:exitAnim="@anim/slide_out_to_right"
