--- a/feature/person_details/src/main/res/navigation/person_details_graph.xml
+++ b/feature/person_details/src/main/res/navigation/person_details_graph.xml
@@ -8,7 +8,7 @@
     <fragment
         android:id="@+id/personDetailsFragment"
         tools:layout="@layout/fragment_person_details_container"
-        android:name="com.indisparte.person_details.PersonDetailsFragment"
+        android:name="com.indisparte.person_details.PersonDetailsContainerFragment"
         android:label="PersonDetails" >
         <argument
             android:name="id"
