--- a/feature/movie_details/src/main/res/layout/list_item_release_info.xml
+++ b/feature/movie_details/src/main/res/layout/list_item_release_info.xml
@@ -7,7 +7,7 @@
         <!-- Variables here -->
         <variable
             name="releaseDate"
-            type="com.indisparte.model.entity.ReleaseDate" />
+            type="com.indisparte.model.entity.movie.ReleaseDate" />
     </data>
 
     <com.google.android.material.card.MaterialCardView
