refatctor: Updated class hierarchy
+ Introduced a general class for objects retrieved from TMDB

--- a/core/ui/src/main/res/values/colors.xml
+++ b/core/ui/src/main/res/values/colors.xml
@@ -22,7 +22,7 @@
     <color name="lynch_100">#1D2633</color>
     <!-- Secondary color variant-->
     <color name="lynch_90">#E61D2633</color>
-    <!-- Other colors-->
+    <!-- OTHER colors-->
     <color name="blue_stone_100">#026258</color>
     <color name="vermilion_100">#D84315</color>
     <color name="vermilion_74">#BDD84315</color>
